# smdtp

./: Cargo.toml  README.md
server/: Cargo.toml
server/src/: main.rs  req_processor.rs  server.rs
smdtp_lib/: Cargo.toml
smdtp_lib/src/: error.rs  lib.rs  request.rs  response.rs
smdtp_lib/src/middleware/: auth.rs  mod.rs
