[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
smdtp_lib = { path = "../smdtp_lib" }
tokio = { version = "1.19.2", features = ["rt-multi-thread", "net", "io-util"] }
tower = "0.4.12"
