[package]
name = "smdtp_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = "0.4.12"
thiserror = "1.0.31"
bytes = "1.1.0"
pin-project = "1.0.10"
tokio = { version = "1.19.2", features = ["macros", "rt"] }
